로그인 시 웹소켓 바로 연결 안됨. 메시지 렌더링 부분 합쳐야 함.

--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -104,6 +104,7 @@
     const requestUser = JSON.parse(
         document.getElementById("request-user").textContent
     );
+    console.log("url: ", url)
 
 
     let currentOrderId = null; 
