--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -105,6 +105,7 @@
         document.getElementById("request-user").textContent
     );
     console.log("url: ", url)
+    console.log("userId, requestUser", userId, requestUser)
 
 
     let currentOrderId = null; 
@@ -217,7 +218,7 @@
     function appendMessage(data, chatElement, isLocal = false) {
         const dateOptions = {hour: "numeric", minute: "numeric", hour12: true};
         const datetime = new Date(data.datetime).toLocaleString("ko-KR", dateOptions);
-        const source = isLocal ? "me" : (data.user === requestUser ? "me" : "other");
+        const source =  isLocal ? "me" : "other";
         const name = isLocal ? requestUser : "주문봇";
     
         const messageDiv = document.createElement('div');
